@@ -421,6 +421,7 @@ const AVCodecTag ff_codec_bmp_tags[] = {
     { AV_CODEC_ID_CFHD,         MKTAG('C', 'F', 'H', 'D') },
     { AV_CODEC_ID_M101,         MKTAG('M', '1', '0', '1') },
     { AV_CODEC_ID_M101,         MKTAG('M', '1', '0', '2') },
+    { AV_CODEC_ID_MAGICYUV,     MKTAG('M', 'A', 'G', 'Y') },
 
     { AV_CODEC_ID_NONE,         0 }
 };
